# quickmorphismstyle

./: .gitignore  BUILD_NOTES.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists_simple_working.txt  CONTRIBUTING.md  ENUM_USAGE.md  ENUM_USAGE_GUIDE.md  FETCHCONTENT_INTEGRATION_COMPLETED.md  FINAL_SOLUTION_SUMMARY.md  FLEXIBLE_INSTALLATION.md  INTEGRATION_GUIDE.md  MainForm.ui.qml  QTCREATOR_FIX.md  QuickMorphism.json  README.md  Shape.qml  ShapeForm.ui.qml  build_example.sh  copy_components.sh  cutemorphism.qrc  cutemorphismstyle.pro  cutemorphismstyle.pro.qtds  cutemorphismstyle.qml  main.qml  qml.qrc  qmldir  qtquickcontrols2.conf  quickmorphism.pri  test_app.qml  test_quickmorphism_style.cpp  test_style.qrc  test_style_CMakeLists.txt  ultra_simple_test.cpp
Cutemorphism/: Button.qml  CheckBox.qml  Elevation.qml  Image.qml  RoundImage.qml  Switch.qml  SwitchDelegate.qml  TextField.qml
QuickMorphism/: ApplicationWindow.qml  BottomNavBar.qml  Button.qml  CalendarPicker.qml  Card.qml  CheckBox.qml  Chip.qml  ComboBox.qml  Config.qml  Container.qml  DatePicker.qml  Dialog.qml  Elevation.qml  FontAwesomeRegular.qml  Fonts.qml  Icons.qml  Image.qml  ImageCard.qml  Label.qml  ListItem.qml  Page.qml  ProgressBar.qml  QuickMorphism.qmltypes  QuickMorphismUI.qml  Required.qml  Ripple.qml  RoundImage.qml  ScrollableContainer.qml  Separator.qml  SnackBar.qml  StyleEnums.qml  Switch.qml  SwitchDelegate.qml  TabBar.qml  TabButton.qml  TextField.qml  TextField.qml.autosave  Title.qml  ToolBar.qml  ToolButton.qml  (+3 more)
QuickMorphism/def/: Constants.qml  DirectoryFontLoader.qml  qmldir
QuickMorphism/themes/: QuickMorphismDarkTheme.qml  QuickMorphismLightTheme.qml  qmldir
cmake/: QuickMorphismConfig.cmake.in  QuickMorphismStyleHelpers.cmake
designer/: QuickMorphism.metainfo
example/: .gitignore  ENUM_EXAMPLE.qml  ENUM_USAGE_EXAMPLE.qml  HOWTO_USE.md  QuickMorphismStudio.qmlproject  README.md  README_FETCHCONTENT.md  README_QTDESIGNER.md  WORKING_ENUM_EXAMPLE.qml  quickmorphism.qmlproject
example/quickmorphismexample/: .qmllint.ini  AdvancedDemo.qml  CMakeLists.old.txt  CMakeLists.txt  CMakeLists_dev.txt  CMakeLists_fetchcontent.txt  CMakeLists_fetchcontent_new.txt  CMakeLists_local_dev.txt  CMakeLists_old_local.txt  CMakeLists_simple.txt  CMakeLists_simple_style.txt  CMakeLists_with_helpers.txt  Demo.qml  Demo_quickstyle.qml  MainForm.ui.qml  QuickMorphismExample_es_ES 2.ts  README.md  README_QTCREATOR.md  main.cpp  main_quickstyle.cpp  main_with_helpers.cpp  quickmorphism.qmlproject  quickmorphism_paths.h.in  quickmorphismexample.pro  test_style.qml
example/quickmorphismexample/android/: gradle.properties
example/simple_example/: CMakeLists.txt  CMakeLists_ultra.txt  Main.qml  TestBasic.qml  main.cpp  qtquickcontrols2.conf  ultra_simple.cpp
examples/: .gitignore
examples/build-quickmorphismexample-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_0_for_Android-Release/: .qmake.stash  Makefile  Makefile.Arm64-v8a  Makefile.Armeabi-v7a  Makefile.X86  Makefile.X86_64  android-quickmorphismexample-deployment-settings.json  linker
examples/build-quickmorphismexample-Desktop-Debug/: .._.._QuickMorphism_Button_qml.cpp  .._.._QuickMorphism_CheckBox_qml.cpp  .._.._QuickMorphism_Elevation_qml.cpp  .._.._QuickMorphism_Fonts_qml.cpp  .._.._QuickMorphism_Icons_qml.cpp  .._.._QuickMorphism_Image_qml.cpp  .._.._QuickMorphism_QuickMorphismUI_qml.cpp  .._.._QuickMorphism_RoundImage_qml.cpp  .._.._QuickMorphism_SwitchDelegate_qml.cpp  .._.._QuickMorphism_Switch_qml.cpp  .._.._QuickMorphism_TextField_qml.cpp  .._.._QuickMorphism_def_Constants_qml.cpp  .._.._QuickMorphism_def_DirectoryFontLoader_qml.cpp  .qmake.stash  Demo_qml.cpp  MainForm.ui_qml.cpp  Makefile  __QuickMorphism_quickmorphism_qmlcache.qrc  moc_colors.cpp  moc_light_theme.cpp  moc_quickmorphismui.cpp  moc_theme.cpp  qmake_qmake_immediate.qrc  qml_qmlcache.qrc  qmlcache_loader.cpp  qrc___QuickMorphism_quickmorphism_qmlcache.cpp  qrc_qmake_qmake_immediate.cpp  qrc_qml.cpp  qrc_qml_qmlcache.cpp
examples/build-quickmorphismexample-Desktop_Qt_5_15_0_clang_64bit-Debug/: .._.._QuickMorphism_ApplicationWindow_qml.cpp  .._.._QuickMorphism_Button_qml.cpp  .._.._QuickMorphism_CheckBox_qml.cpp  .._.._QuickMorphism_Config_qml.cpp  .._.._QuickMorphism_Elevation_qml.cpp  .._.._QuickMorphism_FontAwesomeRegular_qml.cpp  .._.._QuickMorphism_Image_qml.cpp  .._.._QuickMorphism_Page_qml.cpp  .._.._QuickMorphism_QuickMorphismUI_qml.cpp  .._.._QuickMorphism_RoundImage_qml.cpp  .._.._QuickMorphism_SwitchDelegate_qml.cpp  .._.._QuickMorphism_Switch_qml.cpp  .._.._QuickMorphism_TextField_qml.cpp  .._.._QuickMorphism_def_Constants_qml.cpp  .._.._QuickMorphism_def_DirectoryFontLoader_qml.cpp  .._.._QuickMorphism_themes_QuickMorphismDarkTheme_qml.cpp  .._.._QuickMorphism_themes_QuickMorphismLightTheme_qml.cpp  .qmake.stash  Demo_qml.cpp  MainForm.ui_qml.cpp  Makefile  __QuickMorphism_quickmorphism_qmlcache.qrc  moc_configuration.cpp  moc_dark_theme.cpp  moc_light_theme.cpp  moc_quickmorphismui.cpp  moc_statusbar.cpp  moc_theme.cpp  qmlcache_loader.cpp  qrc___QuickMorphism_quickmorphism_qmlcache.cpp  qrc_qml.cpp  qrc_qml_qmlcache.cpp  qrc_quickmorphism.cpp
examples/build-quickmorphismexample-Qt_5_15_0_for_iOS_Simulator-Debug/: .qmake.stash  __Quickmorphism_quickmorphism_qmlcache.qrc
examples/quickmorphismexample/: CMakeLists.txt  Demo.qml  MainForm.ui.qml  MainForm.ui.qml.autosave  QuickMorphismExample_es_ES.ts  main.cpp  qml.qrc  qtquickcontrols2.conf  quickmorphismexample.pro  quickmorphismexample.pro.qtds  quickmorphismexample_en_US.ts
imports/Cutemorphism/: Cutemorphism.qml  qmldir
simple_test/: CMakeLists.txt  main.cpp  main.qml
src/: quickmorphism.cpp  quickmorphism.cpp.autosave  quickmorphism.h  quickmorphismplugin.cpp  quickmorphismstyleplugin.cpp
src/UI/: quickmorphismui.cpp  (+2 more)
statusbar/: CMakeLists.txt  statusbar.cpp  statusbar.h  statusbar.pri  statusbar_android.cpp  statusbar_dummy.cpp
statusbar/include/: statusbar_p.h
statusbar/src/: statusbar.cpp
test_quickstyle_app/: CMakeLists.txt  main.cpp  main.qml
(+97 files in other folders)
